[gd_scene load_steps=5 format=2]

[ext_resource path="res://Prefabs/Pile.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Common/PlayArea.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Common/DeckGenerator.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Games/FreeCell.gd" type="Script" id=4]

[node name="FreeCell" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}
dealSpeed = 12.0

[node name="DealTimer" type="Timer" parent="."]

[node name="PlayArea" type="ReferenceRect" parent="."]
margin_right = 384.0
margin_bottom = 296.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deck" parent="." instance=ExtResource( 1 )]
position = Vector2( -24, -104 )
pileMarker = 0
maxCardSeparation = Vector2( 0, 0 )
size = Vector2( 5, -5 )

[node name="DeckGenerator" type="Node2D" parent="Deck"]
script = ExtResource( 3 )
suits = [ 1, 2, 3, 4 ]
values = [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ]
faceUp = true

[node name="SuitPile1" parent="." instance=ExtResource( 1 )]
position = Vector2( 360, 40 )
pileMarker = 2
maxCardSeparation = Vector2( 0.2, -0.2 )
size = Vector2( 5, -5 )

[node name="SuitPile2" parent="." instance=ExtResource( 1 )]
position = Vector2( 312, 40 )
pileMarker = 2
maxCardSeparation = Vector2( 0.2, -0.2 )
size = Vector2( 5, -5 )

[node name="SuitPile3" parent="." instance=ExtResource( 1 )]
position = Vector2( 264, 40 )
pileMarker = 2
maxCardSeparation = Vector2( 0.2, -0.2 )
size = Vector2( 5, -5 )

[node name="SuitPile4" parent="." instance=ExtResource( 1 )]
position = Vector2( 216, 40 )
pileMarker = 2
maxCardSeparation = Vector2( 0.2, -0.2 )
size = Vector2( 5, -5 )

[node name="FreeCell1" parent="." instance=ExtResource( 1 )]
position = Vector2( 168, 40 )

[node name="FreeCell2" parent="." instance=ExtResource( 1 )]
position = Vector2( 120, 40 )

[node name="FreeCell3" parent="." instance=ExtResource( 1 )]
position = Vector2( 72, 40 )

[node name="FreeCell4" parent="." instance=ExtResource( 1 )]
position = Vector2( 24, 40 )

[node name="SPile1" parent="." instance=ExtResource( 1 )]
position = Vector2( 24, 136 )
maxCardSeparation = Vector2( 0, 14 )
size = Vector2( 0, 100 )

[node name="SPile2" parent="." instance=ExtResource( 1 )]
position = Vector2( 72, 136 )
maxCardSeparation = Vector2( 0, 14 )
size = Vector2( 0, 100 )

[node name="SPile3" parent="." instance=ExtResource( 1 )]
position = Vector2( 120, 136 )
maxCardSeparation = Vector2( 0, 14 )
size = Vector2( 0, 100 )

[node name="SPile4" parent="." instance=ExtResource( 1 )]
position = Vector2( 168, 136 )
maxCardSeparation = Vector2( 0, 14 )
size = Vector2( 0, 100 )

[node name="SPile5" parent="." instance=ExtResource( 1 )]
position = Vector2( 216, 136 )
maxCardSeparation = Vector2( 0, 14 )
size = Vector2( 0, 100 )

[node name="SPile6" parent="." instance=ExtResource( 1 )]
position = Vector2( 264, 136 )
maxCardSeparation = Vector2( 0, 14 )
size = Vector2( 0, 100 )

[node name="SPile7" parent="." instance=ExtResource( 1 )]
position = Vector2( 312, 136 )
maxCardSeparation = Vector2( 0, 14 )
size = Vector2( 0, 100 )

[node name="SPile8" parent="." instance=ExtResource( 1 )]
position = Vector2( 360, 136 )
maxCardSeparation = Vector2( 0, 14 )
size = Vector2( 0, 100 )
